# Sobacki

./: .coverage  .env  Makefile  README.md  coverage.xml  db.sqlite3  pyproject.toml  start_db.sh
migrations/: env.py
migrations/versions/: 070378606110_initial_revision.py  2f08d665a653_initial_revision.py  3a65d9be37a4_initial_revision.py  4a1aebdbeaeb_initial_revision.py  52db15e05451_initial_revision.py  796d3477564b_initial_revision.py  82262160af3a_initial_revision.py  87b0941ecf6c_initial_revision.py  9fc19fc90499_initial_revision.py  b2b453a0c407_initial_revision.py  c85affbea4bd_initial_revision.py  d880c79c57d0_initial_revision.py  d9868d053262_initial_revision.py  db3067057fd0_initial_revision.py  fdf59705f4b2_initial_revision.py
src/: config.py  db.py  kal.py  main.py
src/db/: session.py
src/models/: client.py  permitions.py  project.py  subtask.py  task.py  worker.py  worker_task.py
src/routers/: client.py  permitions.py  project.py  subtask.py  tasks.py  worker.py  worker_task.py
src/schemes/: client.py  client_project.py  permitions.py  project.py  subtask.py  tasks.py  worker.py  worker_project.py  worker_task.py
src/services/: client.py  permitions.py  project.py  subtask.py  tasks.py  worker.py  worker_task.py
test/: func.py  mymymy.py  stsatd.py  test_func.py
