[project]
name = "Sobacki"
version = "0.1.0"
description = ""
authors = [
    {name = "gobaug",email = "navalaev.alexei@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.117.1,<0.118.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "alembic (>=1.17.0,<2.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "psycopg (>=3.2.10,<4.0.0)",
    "psycopg-binary (>=3.2.10,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "anyio (>=4.12.0,<5.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
test = [
    "flake8 (>=7.3.0,<8.0.0)",
    "flake8-pyproject (>=1.2.3,<2.0.0)",
    "pep8-naming (>=0.15.1,<0.16.0)",
    "isort (>=6.1.0,<7.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-ordering (>=0.6,<0.7)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]

[tool.flake8]
max-line-length = 120
ignore = [
    # W503: line break before binary operator
    # W503
    
]
exclude = [
    ".git",
    "__pycache__",
    "conf",
    "venv",
    ".venv",
    ".vscode",
    ".idea",
    "migrations/versions"
]
per-file-ignores = [
    "migrations/env.py:F401"
]

[tool.pytest.ini_options]
# pythonpath = ". src"
minversion = "8.0"
addopts = [
    "--strict",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=70",
    "--cov=src",
]